[gd_scene load_steps=4 format=3 uid="uid://5hjrx53y7uu0"]

[ext_resource type="Script" path="res://scripts/storm_warning.gd" id="1_106s2"]
[ext_resource type="Texture2D" uid="uid://ecu6xgov3706" path="res://assets/warning-sign.png" id="1_er1jn"]
[ext_resource type="AudioStream" uid="uid://bstd1fdn8ifwm" path="res://assets/warning-sound-6686.mp3" id="3_vmc28"]

[node name="StormWarning" type="Node"]
script = ExtResource("1_106s2")

[node name="StormWarningIcon" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_er1jn")

[node name="StormWarningSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vmc28")

[connection signal="finished" from="StormWarningSound" to="." method="_on_storm_warning_sound_finished"]
